@@ -8,6 +8,14 @@ rescue LoadError
   require_gem 'activerecord'
 end
 
+# Search for fixtures first
+fixture_path = File.dirname(__FILE__) + '/fixtures/'
+begin
+  Dependencies.load_paths.insert(0, fixture_path)
+rescue
+  $LOAD_PATH.unshift(fixture_path)
+end
+
 require 'active_record/fixtures'
 
 require File.dirname(__FILE__) + '/../lib/acts_as_taggable'
@@ -17,9 +25,6 @@ ActiveRecord::Base.configurations = YAML::load(IO.read(File.dirname(__FILE__) + 
 ActiveRecord::Base.establish_connection(ENV['DB'] || 'mysql')
 
 load(File.dirname(__FILE__) + '/schema.rb')
-
-Test::Unit::TestCase.fixture_path = File.dirname(__FILE__) + '/fixtures/'
-$LOAD_PATH.unshift(Test::Unit::TestCase.fixture_path)
 
 class Test::Unit::TestCase #:nodoc:
   self.use_transactional_fixtures = true
